# 2d-game-engine-cpp-opengl

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Readme.md
src/: Camera.cpp  Camera.h  Config.h  CubeMeshBuilder.cpp  CubeMeshBuilder.h  DevUi.cpp  DevUi.h  Events.cpp  Events.h  Game.cpp  Game.h  Lifecycle.cpp  Lifecycle.h  Map.cpp  Map.h  Mesh.cpp  Mesh.h  Player.cpp  Player.h  QuadMeshBuilder.cpp  QuadMeshBuilder.h  Rect.cpp  Rect.h  Renderer.cpp  Renderer.h  Resources.cpp  Resources.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  SpriteBatch.cpp  SpriteBatch.h  SpriteRenderer.cpp  SpriteRenderer.h  Spritesheet.cpp  Spritesheet.h  Stacktrace.hpp  Texture.cpp  Texture.h  (+8 more)
src/assets/maps/: level1.txt
src/assets/spritesheets/: main.json
tests/: CMakeLists.txt  RectTest.cpp
